--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     .hero {
       text-align: center;
       padding: 60px 20px;
-      background: url(https://drive.google.com/file/d/15PErejLOTq9rmgw19jCPygywMRglLN6q/view?usp=sharing) no-repeat center center/cover;
+      background: url(https://drive.google.com/file/d/1Z5T1DTus4ddbgAGYPrNLDnZfGbih4ZrD/view?usp=drive_link) no-repeat center center/cover;
     }
     .hero h1 {
       font-size: 2.8rem;
@@ -73,7 +73,7 @@
   <!-- Encabezado -->
   <header>
 
-    <img src="lhttps://drive.google.com/file/d/1Z5T1DTus4ddbgAGYPrNLDnZfGbih4ZrD/view?usp=sharing" alt="Logo JG TRAINING" class="logo">
+    <img src="https://drive.google.com/file/d/1Z5T1DTus4ddbgAGYPrNLDnZfGbih4ZrD/view?usp=drive_link" alt="Logo JG TRAINING" class="logo">
   </header>
 
   <!-- Sección Hero -->
