--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     .hero {
       text-align: center;
       padding: 60px 20px;
-      background: url(https://drive.google.com/file/d/15PErejLOTq9rmgw19jCPygywMRglLN6q/view?usp=sharing) no-repeat center center/cover;
+      background: url(https://i.ibb.co/XxY8N0Pr/IMAGEN-PELADA.jpg) no-repeat center center/cover;
     }
     .hero h1 {
       font-size: 2.8rem;
@@ -72,8 +72,7 @@
 <body>
   <!-- Encabezado -->
   <header>
-
-    <img src="https://drive.google.com/file/d/1Z5T1DTus4ddbgAGYPrNLDnZfGbih4ZrD/view?usp=sharing" alt="Logo JG TRAINING" class="logo">
+    <img src="https://i.ibb.co/LdCp3dzc/logo-png.png" alt="Logo JG TRAINING" class="logo">
   </header>
 
   <!-- Sección Hero -->
