--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>JG TRAINING - Entrenamiento Híbrido</title>
+  <title>JG TRAINING - Programas de Entrenamiento</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #000;
+      background-color: #121212;
       color: #fff;
       line-height: 1.6;
     }
@@ -18,26 +18,23 @@
       text-align: center;
     }
     .logo {
-      max-width: 150px;
+      max-width: 200px;
     }
     .hero {
       text-align: center;
-      padding: 60px 20px;
-      background: url(https://i.ibb.co/XxY8N0Pr/IMAGEN-PELADA.jpg) no-repeat center center/cover;
+      padding: 100px 20px;
+      background: url('https://i.pinimg.com/736x/b4/0c/33/b40c331091031c21519bb93e1e410893.jpg') no-repeat center center/cover;
     }
     .hero h1 {
-      font-size: 2.8rem;
-      margin-bottom: 10px;
-    }
-    .hero p {
-      font-size: 1.2rem;
-      margin-bottom: 20px;
+      font-size: 3.5rem;
+      color: #e10600;
+      text-shadow: 2px 2px 10px rgba(0,0,0,0.7);
     }
     .cta-button {
       background-color: #e10600;
       color: #fff;
-      padding: 15px 30px;
-      font-size: 1.2rem;
+      padding: 20px 40px;
+      font-size: 1.5rem;
       text-decoration: none;
       border-radius: 5px;
       transition: background 0.3s ease;
@@ -45,64 +42,56 @@
     .cta-button:hover {
       background-color: #c00400;
     }
-    .features {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+    .programas {
       padding: 40px 20px;
-      background-color: #111;
-    }
-    .feature {
-      margin: 20px;
-      max-width: 300px;
       text-align: center;
     }
-    .feature h2 {
-      color: #e10600;
-      margin-bottom: 10px;
+    .programa {
+      margin: 20px;
+      display: inline-block;
+      width: 45%;
+      background-color: #1c1c1c;
+      padding: 20px;
+      border-radius: 10px;
+    }
+    .programa img {
+      max-width: 100%;
+      border-radius: 10px;
     }
     footer {
       text-align: center;
       padding: 20px;
       background-color: #000;
-      font-size: 0.9rem;
+      font-size: 1rem;
     }
   </style>
 </head>
 <body>
-  <!-- Encabezado -->
   <header>
     <img src="https://i.ibb.co/LdCp3dzc/logo-png.png" alt="Logo JG TRAINING" class="logo">
   </header>
-
-  <!-- Sección Hero -->
   <section class="hero">
-    <h1>JG TRAINING</h1>
-    <p>Programas de Entrenamiento | Fuerza | Running</p>
-    <p>Estructura Profesional - Resultados Garantizados</p>
-    <!-- Actualiza el enlace con el de Hotmart u otro destino de compra -->
-    <a href="https://www.hotmart.com" class="cta-button">¡Compra Ahora!</a>
+    <h1>¡Lleva tu rendimiento al siguiente nivel!</h1>
+    <p>Descubre los programas de fuerza y running diseñados para transformar tu cuerpo.</p>
+    <a href="#programas" class="cta-button">¡Empieza hoy mismo!</a>
   </section>
-
-  <!-- Sección de Características -->
-  <section class="features">
-    <div class="feature">
-      <h2>Programas de Entrenamiento</h2>
-      <p>Planes estructurados para transformar tu rendimiento y alcanzar tus metas.</p>
+  <section id="programas" class="programas">
+    <div class="programa">
+      <img src="https://i.pinimg.com/736x/45/11/f1/4511f114e85887dd439d9614799dd260.jpg" alt="Entrenamiento de Fuerza">
+      <h2>Programa de Fuerza</h2>
+      <p>Desarrolla músculo, mejora tu rendimiento y alcanza tu mejor versión.</p>
+      <a href="#" class="cta-button">Comprar en Hotmart</a>
     </div>
-    <div class="feature">
-      <h2>Ebook de Nutrición</h2>
-      <p>Guías nutricionales personalizadas para optimizar tu rendimiento.</p>
-    </div>
-    <div class="feature">
-      <h2>Ebook de Recuperación</h2>
-      <p>Técnicas de recuperación y prevención de lesiones para entrenar al máximo.</p>
+    <div class="programa">
+      <img src="https://i.pinimg.com/736x/50/dd/d8/50ddd8dcaa8a02afba4a905dab50b5b5.jpg" alt="Entrenamiento de Running">
+      <h2>Programa de Running</h2>
+      <p>Mejora tu resistencia, técnica y velocidad con nuestro método probado.</p>
+      <a href="#" class="cta-button">Comprar en Hotmart</a>
     </div>
   </section>
-
-  <!-- Pie de Página -->
   <footer>
     <p>&copy; 2025 JG TRAINING. Todos los derechos reservados.</p>
   </footer>
 </body>
 </html>
+
