--- a/index.html
+++ b/index.html
@@ -13,62 +13,6 @@
             color: #fff;
             text-align: center;
         }
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        .hero {
-            background-image: url('https://i.pinimg.com/736x/50/dd/d8/50ddd8dcaa8a02afba4a905dab50b5b5.jpg');
-            background-size: cover;
-            background-position: center;
-            height: 500px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-transform: uppercase;
-            font-size: 2.5em;
-            font-weight: bold;
-            padding: 20px;
-            position: relative;
-        }
-        .logo {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            width: 100px;
-        }
-        .highlight {
-            color: red;
-        }
-        .offer {
-            background-color: red;
-            padding: 15px;
-            font-size: 1.5em;
-            font-weight: bold;
-        }
-        .programs {
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
-            margin: 40px 0;
-        }
-        .program {
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JG TRAINING - Entrenamiento Híbrido</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #111;
-            color: #fff;
-            text-align: center;
-        }
         .header {
             background-color: black;
             padding: 20px;
@@ -79,7 +23,7 @@
             z-index: 1000;
         }
         .logo {
-            width: 150px;
+            width: 200px;
         }
         .container {
             max-width: 1200px;
@@ -110,21 +54,26 @@
             font-weight: bold;
         }
         .programs {
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
             margin: 40px 0;
         }
         .program {
-            width: 30%;
-            padding: 20px;
             background-color: #222;
             margin: 10px;
             border-radius: 10px;
+            padding: 20px;
+            cursor: pointer;
         }
         .program img {
             width: 100%;
             border-radius: 10px;
+        }
+        .program h3 {
+            margin: 10px 0;
+        }
+        .program p {
+            display: none;
+            font-size: 1em;
+            margin-top: 10px;
         }
         .cta {
             background-color: red;
@@ -140,6 +89,16 @@
             background-color: darkred;
         }
     </style>
+    <script>
+        function toggleInfo(id) {
+            var info = document.getElementById(id);
+            if (info.style.display === "none" || info.style.display === "") {
+                info.style.display = "block";
+            } else {
+                info.style.display = "none";
+            }
+        }
+    </script>
 </head>
 <body>
     <div class="header">
@@ -152,17 +111,15 @@
     <div class="container">
         <h2>Elige tu camino</h2>
         <div class="programs">
-            <div class="program">
+            <div class="program" onclick="toggleInfo('fuerza-info')">
                 <img src="https://i.pinimg.com/736x/99/d7/14/99d714fd5225bfc04e172f2cd9cc7ecf.jpg" alt="Fuerza">
                 <h3>Entrenamiento de Fuerza Híbrida</h3>
-                <p>Gana músculo, mejora tu técnica y combina fuerza con resistencia.</p>
-                <button class="cta" onclick="location.href='fuerza.html'">Ir al programa</button>
+                <p id="fuerza-info">Desarrolla fuerza y resistencia con un enfoque híbrido. Nuestros programas incluyen rutinas de gimnasio, ejercicios funcionales y planificación progresiva para maximizar tu rendimiento. Además, recibirás un eBook exclusivo con estrategias avanzadas de entrenamiento.</p>
             </div>
-            <div class="program">
+            <div class="program" onclick="toggleInfo('running-info')">
                 <img src="https://i.pinimg.com/736x/b4/0c/33/b40c331091031c21519bb93e1e410893.jpg" alt="Running">
                 <h3>Entrenamiento de Running</h3>
-                <p>Aumenta tu resistencia, velocidad y desempeño con nuestro programa especializado.</p>
-                <button class="cta" onclick="location.href='running.html'">Ir al programa</button>
+                <p id="running-info">Mejora tu velocidad, resistencia y técnica con planes personalizados según distancia y nivel. Nuestros programas incluyen preparación para 5K, 10K y maratón. ¡Además, obtendrás un eBook exclusivo con estrategias de entrenamiento y nutrición para corredores!</p>
             </div>
         </div>
         <button class="cta">Sumate a mis programas...</button>
