--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             z-index: 1000;
         }
         .logo {
-            width: 200px;
+            width: 150px;
         }
         .tagline {
             color: white;
@@ -36,10 +36,10 @@
             padding: 20px;
         }
         .hero {
-            background-image: url('/mnt/data/A_powerful_and_authoritative_fitness_logo_represen.png');
+            background-image: url('A_powerful_and_authoritative_fitness_logo_represen.png');
             background-size: cover;
             background-position: center;
-            height: 500px;
+            height: 400px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -61,22 +61,15 @@
         .faq {
             background-color: #222;
             padding: 20px;
-            margin: 40px 0;
+            margin-top: 30px;
             border-radius: 10px;
         }
         .faq h2 {
             color: red;
         }
         .faq-item {
-            margin-bottom: 10px;
             text-align: left;
-        }
-        .faq-item h3 {
-            cursor: pointer;
-            color: yellow;
-        }
-        .faq-item p {
-            display: none;
+            margin-bottom: 15px;
         }
         .cta {
             background-color: yellow;
@@ -92,41 +85,11 @@
         .cta:hover {
             background-color: orange;
         }
-        .contact-form {
-            background-color: #222;
-            padding: 20px;
-            margin: 40px 0;
-            border-radius: 10px;
-        }
-        .contact-form input, .contact-form textarea {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: none;
-            border-radius: 5px;
-        }
-        .contact-form button {
-            background-color: red;
-            color: white;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .contact-form button:hover {
-            background-color: darkred;
-        }
     </style>
-    <script>
-        function toggleContent(id) {
-            var content = document.getElementById(id);
-            content.style.display = content.style.display === "none" ? "block" : "none";
-        }
-    </script>
 </head>
 <body>
     <div class="header">
-        <img src="/mnt/data/A_powerful_and_authoritative_fitness_logo_represen.png" alt="JG TRAINING" class="logo">
+        <img src="A_powerful_and_authoritative_fitness_logo_represen.png" alt="JG TRAINING" class="logo">
         <p class="tagline">Cambia tu manera de entrenar, optimiza tu rendimiento</p>
     </div>
     <div class="hero">
@@ -137,24 +100,15 @@
         <h2>Preguntas Frecuentes</h2>
         <div class="faq">
             <div class="faq-item">
-                <h3 onclick="toggleContent('faq1')">¿Cuánto dura cada sesión de entrenamiento?</h3>
-                <p id="faq1">Cada sesión dura entre 45 y 60 minutos, dependiendo del programa elegido.</p>
+                <strong>¿Para quién es este entrenamiento?</strong>
+                <p>Para personas de todos los niveles que buscan mejorar su fuerza y resistencia.</p>
             </div>
             <div class="faq-item">
-                <h3 onclick="toggleContent('faq2')">¿Necesito equipo para entrenar?</h3>
-                <p id="faq2">No necesariamente, ofrecemos opciones con y sin equipo para adaptarnos a tus necesidades.</p>
+                <strong>¿Cómo me inscribo?</strong>
+                <p>Haz clic en el botón de inscripción y sigue los pasos.</p>
             </div>
         </div>
-        <div class="contact-form">
-            <h2>Contáctanos</h2>
-            <p>Déjanos tus datos y nos pondremos en contacto contigo.</p>
-            <form>
-                <input type="text" name="nombre" placeholder="Nombre" required>
-                <input type="email" name="email" placeholder="Correo Electrónico" required>
-                <textarea name="mensaje" placeholder="Mensaje" required></textarea>
-                <button type="submit">Enviar</button>
-            </form>
-        </div>
+        <button class="cta" onclick="window.location.href='https://hotmart.com'">¡Únete hoy y empieza a transformar tu entrenamiento!</button>
     </div>
 </body>
 </html>
